# zero2prod

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  TODO.md  deny.toml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-0916f83b415017bc3911037c98e8605f454fbd877d29b9649153b56a8f2d7bbd.json  query-0acd92cfb0f0b8642355659a9f25a6037184dba6e55d47903c64cd925da6edba.json  query-14c5d6f9a23527f4f28cacfae014d484c7d5239482a25c394b68adecd28dad54.json  query-1813b074dbccc633d8cc786551371a59c330e845bf8ec784419ca0b533ef7677.json  query-32ca90e245442ecf0c6b029fca769e6773bbb1687d90ebb4b4081c6bdbc3ca1b.json  query-34fd56c1ad7101dee5430aeb23f639c15dc6e4061f790c7dd894d4e6b31de0c2.json  query-35e38d5e22a5a0bc35efbe76c7e7dd7939bed2dd5e98fb66e60b78c1c2e4cfa2.json  query-3aec8c42f765bef5085e845274969604d9a00fd8f2a8217304b860bf0f77039c.json  query-3fac3fd69059a36e8f51551a3062f0bf3c89dd7800f08014eb23e03285cd78b8.json  query-4752992d21f82593021cf84ed13c0779919e367b81a388661f1f6377b5cac21d.json  query-4973ca7a5bf92d7afa725f949a571949bb5e3fb4068c38c3a64b79b080a1ea24.json  query-5e79b5740477486d6021cd8511566d72e900ff5548a32b8ed18255b8dd5fcc41.json  query-696c2b8d6c35c0907e9d51056428d5cf6d9a0d82f1bb4d5ef4405cbba0a3b5f0.json  query-6c0aa6f59800f4d3d1dce87ff564abb1f5bd3f0302f3248e0fb62a58b5d3fc71.json  query-6ce4f59753d54511a0ac9c72a2892dae5ffa64f39554f008f0ca8232b39850e3.json  query-742bbaf6171ba88b8187821b127490ee76c9b4ab0c1997f553c74c560ffc024a.json  query-8261c91d066a8201c23bfcf40d673ecbafe5c9337dcddbb6a26b4e02bc3c53f0.json  query-870d194dd8f9b2500fd755badfb5179ead2461b8e1676b3e985bbeab5a80ea94.json  query-9c182717ad886ef2eca105dd81cee343bc9e443ecacafd490d997acf39c9701b.json  query-9fff4f6fa9854bd8d7cfab06c9ee945fdc7329afd8d028311af3881ffb715d3e.json  query-a5179fe15e7ab0460afdc82de6a88ae07c92e58b62aaba63ac4256317f063418.json  query-b86205879bd4a0d75c3386a4a8dd4cba53c6a125d7f40f47c85c7aec2cffc315.json  query-bfeac677dcb5063678401d2ec53e023bc8a67efad2b15dfc7f3ed4ed8896b888.json  query-c89080d2014f572d86f9ed20a50c65b238f129ad0b10ef303d6ea04b49878e40.json  query-d09dcf8b8965c9a374ba7fb95ebaddf4d660ff65935bc515a1237d9c75afbc93.json  query-dc6134e94bf42c26b36ab812eb8fd8b476391064f4782e27bbdb51ff958c08b2.json  query-e30bcaea22f62fe1ea659391ac8f54b99fa7d3d19ede22386a5950cb1b6dfdab.json  query-f466da3084baedf4c239149a28d99b4bfc706fbe0d44d4fcade48b1565391a62.json
configuration/: base.yaml
docs/: Authentication.md  CI_CD.md
migrations/: 20240813084308_add_status_to_subscriptions.sql  20240813084610_make_status_not_null_in_subscriptions.sql  20240813084856_create_subscription_tokens_table.sql  20240822094326_create_users_table.sql  20240909102709_seed_user.sql  20240912093659_create_idempotency_table.sql  20241222104105_update_admin_password_hash.sql  20241222194629_add_email_to_users.sql  20241222194948_add_admin_email.sql  20241222195235_force_null_check_on_users_email.sql  20241222201913_create_password_resets_table.sql  20241224205054_force_email_to_be_unique.sql  20241227091520_add_reset_token_hash_column.sql  20241227091644_backfill_reset_token_hash.sql  20241227092039_swap_reset_token_pk_and_drop_old_token.sql  20241227092121_enforce_reset_token_expires_at.sql  20241227100641_add_reset_token_used_at_column.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  password_reset_token.rs  subscriber_email.rs  subscriber_name.rs  subscriber_password.rs  subscription_token.rs
src/idempotency/: persistence.rs
src/repository/: mod.rs  password_resets.rs  user_repository.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/forgot_password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
src/routes/reset_password/: get.rs  post.rs
src/routes/reset_password/confirm/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  forgot_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  reset_password.rs  reset_password_confirm.rs  subscriptions.rs  subscriptions_confirm.rs
