[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[features]
default = []
open-telemetry = [
    "tracing-opentelemetry",
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-appender-tracing",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
]

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
figment = { version = "0.10", features = ["yaml", "env"] }
serde-aux = "4.5"
actix-web = "4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
tracing-opentelemetry = { version = "0.26", optional = true }
opentelemetry = { version = "0.25", optional = true }
opentelemetry_sdk = { version = "0.25", features = [
    "rt-tokio",
], optional = true }
opentelemetry-appender-tracing = { version = "0.25", optional = true }
opentelemetry-otlp = { version = "0.25.0", features = [
    "trace",
    "http-proto",
    "reqwest-client",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.25.0", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.210"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.11.0"
validator = "0.16"
# TODO(aalhendi): Upgrade rand crate?
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.21"
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }

# used exclusively for testing, not compiled in release binary
[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
quickcheck = "=1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6.2"
linkify = "0.10.0"
serde_urlencoded = "0.7.1"
